study/ingress/ingress-http-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: nginx-dm
spec:  
  replicas: 3
  selector:
    matchLabels:
      app: nginx-dm 

  template:    
    metadata:      
      labels:        
        app: nginx-dm    
    spec:      
      containers:      
        - name: nginx-dm      
          image: nginx   
          imagePullPolicy: IfNotPresent     
          ports:        
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:  
  name: nginx-svc
spec:  
  ports:    
    - port: 80      
      targetPort: 80      
      protocol: TCP  
  selector:    
    name: nginx-dm

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:  
  name: nginx-test
  spec:  
    rules:    
      - host: org.darebeat.com     
        http:        
          paths:        
          - path: /          
            backend:            
              serviceName: nginx-svc            
              servicePort: 80
